8201369: Inet4AddressImpl_getLocalHostName reverse lookup on Solaris only

Reviewed-by: clanger, chegar